# RL-DT_in_key2door

./: README.md  evaluate.sh  pyproject.toml  requirements.txt  setup.py  train.sh
logs/: eval.out
src/: __init__.py  evaluate.py  utils.py
src/config/: evaluate_config.json  ppo_config.json  train_config.json
src/env/: KeyToDoor.py  __init__.py  render_k2d.py
src/models/: __init__.py  train_models.py
src/models/dt/: __init__.py  decision_transformer.py  train_dt.py
src/models/dt/train/: dt_train.py  trainer.py
src/models/ppo/: __init__.py  train_ppo.py
